# libfreesteel

freesteel/: .ycm_extra_conf.py  CMakeLists.txt  mm.off
freesteel/python/: FreesteelPython.h
freesteel/src/: CMakeLists.txt  canary.cpp
freesteel/src/bolts/: I1.h  P2.h  P3.h  Partition1.cpp  Partition1.h  S1.cpp  S1.h  debugfuncs.h  smallfuncs.h  vo.h
freesteel/src/cages/: Area2_gen.cpp  Area2_gen.h  PathX.cpp  PathX.h  PathXSeries.h  PathXboxed.cpp  PathXboxed.h  Ray_gen2.cpp  Ray_gen2.h  S2weave.cpp  S2weave.h  SurfX.cpp  SurfX.h  SurfXBuildComponents.cpp  SurfXboxed.cpp  SurfXboxed.h  pathxseries.h
freesteel/src/pits/: CircCrossingStructure.cpp  CircCrossingStructure.h  CoreRoughGeneration.cpp  CoreRoughGeneration.h  NormRay_gen.cpp  NormRay_gen.h  S2weaveCell.cpp  S2weaveCell.h  S2weaveCellLinearCut.cpp  S2weaveCellLinearCut.h  S2weaveCellLinearCutTraverse.cpp  SLi_gen.cpp  SLi_gen.h  SurfXSliceRay.cpp  SurfXbuildcomponents.cpp  toolshape.cpp  toolshape.h
freesteel/src/visuals/: GeometryStuffTogether.cpp  MakeToolpath.cpp  MakeToolpath.h  fsvtkToolpathMapper.cpp  fsvtkToolpathMapper.h  gst.h  gstsurface.cpp  gstsurface.h  toolshape.cpp
freesteel/src/xenon/: AnimationFrame.cpp  AnimationFrame.h  BoundingBoxDlg.cpp  BoundingBoxDlg.h  MainFrame.cpp  MainFrame.h  MyApp.cpp  coreroughdlg.cpp  wxVTKRenderWindowInteractor.cxx  wxVTKRenderWindowInteractor.h  wxhelpers.cpp
